# Aion

./: .env.example  .gitignore  CalendarWindow.meta.json  CalendarWindow.tsx  PRIVACY.md  README.md  TERMS.md  calendar_server.py  description.txt  pyproject.toml  requirements.txt
.claude/: settings.local.json
agent/: __init__.py  asp_model.py  solver.py
aion/: __init__.py  __main__.py  asp_model.py  auth.py  cli.py  config.py  date_parser.py  display.py  google_cal.py  intent.py  ollama.py  setup.py  solver.py
tests/: test_date_parser.py  test_intent.py  test_setup_command.py  test_solver.py
